template/layout bugfixes

--- a/ckanext/nhm/theme/fanstatic/css/view-controls.css
+++ b/ckanext/nhm/theme/fanstatic/css/view-controls.css
@@ -56,13 +56,7 @@
 .list-view .controls > *,
 .recline-data-explorer .controls > * {
   align-self: center;
-}
-.list-view .controls > *:not(:first-child),
-.recline-data-explorer .controls > *:not(:first-child) {
   padding-left: 5px;
-}
-.list-view .controls > *:not(:last-child),
-.recline-data-explorer .controls > *:not(:last-child) {
   padding-right: 5px;
 }
 .list-view .controls:not(.flex-reverse) > *:first-child,
