--- a/ckanext/nhm/theme/less/flex.less
+++ b/ckanext/nhm/theme/less/flex.less
@@ -9,12 +9,8 @@
 
   & > * {
     align-self: center;
-    &:not(:first-child) {
-      padding-left: 5px;
-    }
-    &:not(:last-child) {
-      padding-right: 5px;
-    }
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
 
